# bevy_aseprite_ultra

./: .gitignore  Cargo.toml  README.md
assets/: animated_layers.aseprite  layers.aseprite  sliced_layers.aseprite
examples/: 3d.rs  animated_layers.rs  animation.rs  layers.rs  manual.rs  move_player.rs  queue.rs  shader.rs  sliced_layers.rs  slices.rs  ui.rs  ui_layers.rs
examples/helpers/: mod.rs
examples/processing/: asset_processing.rs
src/: animation.rs  layers.rs  lib.rs  loader.rs  slice.rs
tests/: layer_filter.rs
