[package]
name = "bevy_aseprite_ultra"
version = "0.8.2"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A Bevy plugin for directly loading spritesheets and animations from aseprite binary files with hot reloading support."
keywords = ["bevy", "aseprite", "atlas", "loader", "animation"]
repository = "https://github.com/Lommix/bevy_aseprite_ultra.git"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_render",
  "bevy_asset",
  "bevy_log",
  "png",
] }
aseprite-loader = "0.4.2"
uuid = "1.22.0"
thiserror = "2.0.18"
serde = "1.0.218"
rmp-serde = { version = "1.3.0", optional = true }
image = { version = "0.25.10", optional = true }
anyhow = "1.0.102"
msg_interned_id = { git = "https://github.com/MolecularSadism/msg_interned_id", tag = "v0.3.0" }

[dev-dependencies]
bevy = { version = "0.18", features = [
  "file_watcher",
  "multi_threaded",
  "bevy_window",
  "bevy_ui_debug",
  "bevy_dev_tools",
] }


[features]
asset_processing = [
  "bevy/serialize",
  "bevy/qoi",
  "dep:rmp-serde",
  "dep:image",
  "bevy/asset_processor",
]
3d = ["bevy/bevy_pbr"]

[[example]]
name = "asset_processing"
path = "examples/processing/asset_processing.rs"
required-features = ["asset_processing"]

[[example]]
name = "3d"
path = "examples/3d.rs"
required-features = ["3d"]
